<resources>
    <string name="app_name">CQ</string>
    <string name="title_Activity_Sms_Error_dialog">SMS Error</string>
    <string name="button_copy_url">Copy URL to clipboard</string>
    <string name="button_send_message">Send SMS</string>
    <string name="location_unavailable"><i>Location unavailable!</i></string>
    <string name="location_disabled_alert_title">CQ needs to know your location!</string>
    <string name="location_disabled_alert_message">To use CQ, please go to Settings on your device and enable location services.</string>
    <string name="location_disabled_alert_dismiss_button">OK</string>
    <string name="menu_pause_location_updates">Pause location updates</string>
    <string name="menu_resume_location_updates">Resume location updates</string>
    <string name="menu_change_units">Change units (feet/meters)</string>
    <string name="menu_copy_url">Copy URL to clipboard</string>
    <string name="menu_about">About CQ</string>
    <string name="shared_prefs_file_key">com.pastcustoms.cq.PREFERENCE_FILE_KEY</string>
    <string name="prefs_is_foreground_app">is_foreground_app</string>
    <string name="prefs_notification_id">notification_id</string>
    <string name="prefs_last_phone_no">last_phone_no</string>
    <string name="prefs_last_display_name">last_display_name</string>
    <string name="prefs_prefer_metric">prefer_metric</string>
    <string name="button_go_to_settings">Go to Settings</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_view_license_agreement">View license agreement</string>
    <string name="airplane_mode_alert_title">Flight mode is on!</string>
    <string name="airplane_mode_alert_message">To send messages with CQ, first disable Flight Mode.</string>
    <string name="toast_location_updates_paused">Location updates are now paused</string>
    <string name="toast_updating_location">Updating your location</string>
    <string name="about_cq_title">About CQ</string>
    <string name="about_cq_details">"Version 1.0\nDeveloped by Scott Bassett, 2015\nwww.pastcustoms.com\n\nIcons:\nionicons.com\ngoogle.com/design/icons\n\nBackground pattern:\nsubtlepatterns.com"</string>
    <string name="ok">OK</string>
    <string name="my_location">My location</string>
    <string name="url_copied">URL copied to clipboard</string>
    <string name="error_google_play_title">Error connecting to Google Play Services</string>
    <string name="error_google_play_message">CQ cannot connect to Google Play Services. Unfortunately this means CQ cannot get your location!</string>
    <string name="toast_invalid_url">Error: please update your location</string>
    <string name="toast_invalid_phone">Error: please enter a valid phone number</string>
    <string name="toast_sending_sms">Sending SMS...</string>
    <string name="toast_sms_sent_to_">"SMS sent to "</string>
    <string name="toast_sms_to_">"SMS to "</string>
    <string name="toast__was_not_sent">" was not sent!"</string>
    <string name="toast_sms_delivered_to_">"SMS delivered to "</string>
    <string name="toast__was_not_delivered">" was not delivered!"</string>
    <string name="notification_location_sms_not_sent">Location SMS not sent</string>
    <string name="error">Error</string>
    <string name="label_send_to">"Send to: "</string>
    <string name="choose_contact_description">Choose a telephone number from your contacts.</string>
    <string name="label_message">Message:</string>
    <string name="title_activity_legal_info">CQ End-User License Agreement</string>
    <string name="action_settings">Settings</string>
    <string name="warning_low_accuracy">⚠ Location accuracy is low</string>
    <string name="warning_old_location">⚠ Location more than 1 hour old</string>
    <string name="advisory_gps_disabled">⚙ Turn on your GPS for better accuracy</string>
</resources>